--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
 <head>
     <title>Home</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    
+<div class = "container">
+  <h1><i>Hélène Cixous</i></h1>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/69/H%C3%A9l%C3%A8ne_Cixous_par_Claude_Truong-Ngoc_2011.jpg" 
+class="image">
+  <h2>A professor, French feminist writer, poet, playwright, philosopher, literary critic and rhetorician</h2>
+  <div class = "meat">"In her writing Cixous deviates from the accepted masculine style and writes in an obvious circuitous and contradictory manner. By speaking in contradictions she deliberately calls attention to the fact that she can not express her true thoughts as she feel them, thereby exposing the inadequacy of the current language. Since the immediate creation of a new language is not a feasible option, women are left with the option of only revealing the flaws that exist. Exposing these flaws is the only way women will be able to overcome the obstacles that are constructed by a patriarchal society."</div>
+  <h2>Her Views:</h2>
+  <div class = "meat">Cixous was a modern femenist who explained a lot of her ideas through writing literature. Some viewpoints she supported/helped found included:<ul>
+  <li><a href= "  https://en.wikipedia.org/wiki/Post-structural_feminism">Post-structural feminism</a></li>
+  <li>Establishing a unique female perspective</li>
+    <li>Giving Women a voice and right to speak up</li>
+</ul>
+  </div>
+  
+  <a href= "https://en.wikipedia.org/wiki/H%C3%A9l%C3%A8ne_Cixous">Link to Wikipedia</a>
+  
